@@ -1,0 +1,36 @@
+http://winmerge.org/downloads.php
+http://winmerge.org/index.php
+http://winmerge.org/links.php
+http://winmerge.org/WinMergePAD.php
+http://winmerge.org/2.4/changes.php
+http://winmerge.org/2.4/index.php
+http://winmerge.org/2.4/limitations.php
+http://winmerge.org/2.4/screenshots.php
+http://winmerge.org/2.4/manual/aboutdoc.html
+http://winmerge.org/2.4/manual/commandline.html
+http://winmerge.org/2.4/manual/comparedirs.html
+http://winmerge.org/2.4/manual/comparefiles.html
+http://winmerge.org/2.4/manual/configuration.html
+http://winmerge.org/2.4/manual/faq.html
+http://winmerge.org/2.4/manual/filters.html
+http://winmerge.org/2.4/manual/images
+http://winmerge.org/2.4/manual/index.html
+http://winmerge.org/2.4/manual/installing.html
+http://winmerge.org/2.4/manual/introdiff.html
+http://winmerge.org/2.4/manual/introduction.html
+http://winmerge.org/2.4/manual/locales.html
+http://winmerge.org/2.4/manual/openpaths.html
+http://winmerge.org/2.4/manual/plugins.html
+http://winmerge.org/2.4/manual/quickstart.html
+http://winmerge.org/2.4/manual/screenshots
+http://winmerge.org/2.4/manual/shortcuts.html
+http://winmerge.org/2.4/manual/textencoding.html
+http://winmerge.org/2.4/manual/versioncontrol.html
+http://winmerge.org/2.4/manual/whatsnew.html
+http://winmerge.org/2.4/manual/whatsnew22.html
+http://winmerge.org/developer/developers.xml
+http://winmerge.org/developer/index.php
+http://winmerge.org/developer/needed.php
+http://winmerge.org/developer/l10n/index.php
+http://winmerge.org/developer/l10n/instructions.php
+http://winmerge.org/developer/l10n/status.php
