@@ -1,3 +1,8 @@
+2006-08-23 Tim
+ PATCH: [ 1543687 ] Google AdSense setup
+  Web: page.inc new file sitemap.txt
+  Web\css: all.css
+
 2006-08-10 Tim
  PATCH: [ 1538297 ] Website changes for new stable release 2.4.10
   Web: downloads.php index.php page.inc WinMergePAD.xml
